# RUC-random-universe-cipher

./: README.md
random-universe-cipher/: .nojekyll  CPP_WASM_OPTIMIZATION.md  DEPLOYMENT_SUMMARY.md  GITHUB_PAGES.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_SUMMARY.md  QUICK_START_CPP.md  RUNNING_WITHOUT_BUILD.md  package.json  vite.config.ts
random-universe-cipher/.github/workflows/: deploy.yml
random-universe-cipher/cpp-wasm/: .gitignore  CMakeLists.txt  README.md  build.sh  setup-emscripten.sh
random-universe-cipher/cpp-wasm/src/: chacha20.cpp  chacha20.h  gf_math.cpp  gf_math.h  ruc_cipher.cpp  ruc_cipher.h  sbox.cpp  sbox.h  shake256.cpp  shake256.h
random-universe-cipher/src/cipher/: README_CPP_PARALLEL.md  index.ts  parallel-worker.ts
random-universe-cipher/src/worker/: cpp-wasm-worker.ts
